devs first commit

--- a/engins/templates/engins/eng_del.html
+++ b/engins/templates/engins/eng_del.html
@@ -5,5 +5,5 @@
 <h3>Do you want delete {{ obj.eng_name }}</h3>
 <p><input type="submit" value="Delete"> <a href="{{ get_absolute_url_index }}">Cancel</a></p>
 </form>
-
+<!-- edited on DEV bransh -->
 {% endblock %}
